--- a/custom.css
+++ b/custom.css
@@ -85,8 +85,13 @@ article > h3 {
     font-weight: 500;
 }
 
+.licuadora{
+    height: 254px;
+    width: 100%; 
+}
+
 article > img{
-    height: 250px;
+    height: 280px;
     width: 100%;    
 }
 
